// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle GET_SETTING_SUCCESS with content_disconnected response 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": "some-value",
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle GET_SETTING_SUCCESS without content_disconnected response 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle GET_TASK_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle RESET_TASKS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_CLOSE_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_CLOSE_TASK_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_COLUMNS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [
    "col1",
    "col2",
    "col3",
  ],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_DISABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_ENABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": false,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": false,
  "missingPermissions": undefined,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_OPEN_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": true,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_OPEN_TASK_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": true,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_FAILURE 1`] = `
Object {
  "availableQuantities": Object {},
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": true,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_SUCCESS 1`] = `
Object {
  "availableQuantities": "some-quantities-data",
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "activePermissions": Object {
    "can_delete_manifest": undefined,
    "can_edit_organizations": undefined,
    "can_import_manifest": undefined,
    "can_manage_subscription_allocations": undefined,
  },
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 20,
  "loading": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "quantitiesLoading": false,
  "results": "some-results",
  "search": "some search",
  "searchIsActive": true,
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_UPDATE_SEARCH_QUERY 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "some-query",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle TASK_BULK_SEARCH_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should handle UPDATE_SUBSCRIPTION_COLUMNS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [
    "col1",
    "col2",
  ],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;

exports[`Subscriptions reducer should return the initial state 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "disconnected": false,
  "itemCount": 0,
  "loading": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "taskModalOpened": false,
  "tasks": Array [],
}
`;
